# nav2_ground_consistency_costmap_plugin

./: CMakeLists.txt  LICENSE  README.md  ground_consistency_layer.xml  package.xml
include/nav2_ground_consistency_costmap_plugin/: ground_consistency_layer.hpp  kpi_tracker.hpp
scripts/: plot_costmap_kpi.py
src/: ground_consistency_layer.cpp  kpi_tracker.cpp
test/: test_ground_consistency_layer.cpp
