<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_ground_consistency_costmap_plugin</name>
  <version>1.0.0</version>
  <description>Ground consistency costmap layer using ground/non-ground point clouds.</description>

  <maintainer email="haider_lodhi@hotmail.com">dockeruser</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core -->
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>nav2_costmap_2d</depend>

  <!-- Messages -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Tests -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <costmap_2d plugin="${prefix}/ground_consistency_layer.xml" />
  </export>
</package>